Agregar Bootswatch theme: Lumen y algunas correciones en los formularios

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,16 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//Bootswatch theme: Lumen
+@import 'bootswatch';
+
+
+
+.img-h-50{
+    height: 50px;
+}
+
+.a-nd{
+    text-decoration: none;
+}
