--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,11 +5,15 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
 
 //Bootswatch theme: Lumen
-@import 'bootswatch';
+// @import 'bootswatch';
 
+//Bulma
+@import '~bulma/bulma';
+
+@import '~@creativebulma/bulma-collapsible';
 
 
 .img-h-50{
